StarSpan ChangeLog
$Id$

2008-02-05
    - Included --gui extended option to launch the GUI
    
2008-02-02
        - starspan_csv_dup_pixel.cc: Minor changes in log messages for
          easier inspection.

2008-01-28
	- Added processing of rasters according to associated masks.
      See starspan_csv_dup_pixel.cc
	  
      Tests done with:
        VECTOR=/proj/delta/gis/vector_data/phenology/200406/all_emergent_polyg_2004.shp
        RASTERS=/proj/delta/raster/hymap/classification/version_4/200406/inputs/indexes/sdw_p1_*_indx
        MASKS=/proj/delta/raster/hymap/base/ref1_geo3/200406/mask_edge/200406_p1_*_ref1_mask.img
        
        cd /proj/delta/raster/hymap/classification/version_4/200406/results
        starspan --duplicate_pixel direction 90 --vector $VECTOR \
            --raster $RASTERS --mask $MASKS \
            --csv test_dupixel.csv --verbose > test_dupixel.log

    - TODO: mask handling on other options/commands -- now, only done for the
            --duplicate_pixel and --csv commands

2008-01-24 (1.0.06)
	- First tests on --duplicate_pixel
	- Dev note: layer->ResetReading() call in traverse()
	  New static flag: bool _resetReading in class Traverser:
	    By default, traverse() starts by calling ResetReading on the layer
	    (_resetReading == true).
	    However, this is in general not appropriate because it precludes the
	    traversal from being used as a subtask. 
	    For example, in starspan_csv_dup_pixel, all features are processed
	    but the extraction from each one is done with a corresponding traversal.
	    As a quick fix to allow for this behavior at least for specific commands,
	    this global (static) flag can be used to instruct the traversal not
	    to call ResetReading on the layer.

     - Fixed some memory errors and leaks -- thanks valgrind, again!
		

2008-01-16 (1.0.06)
	- FR #350112: Duplicate pixel handling -- starting implementation.
	See discussion: http://starspan.casil.ucdavis.edu/doku/doku.php?id=fr_350112
	
	