@@ -201,6 +201,9 @@ static bool within_mask(OGRFeature* feature, RasterInfo* rasterInfo) {
     
 	if ( globalOptions.pix_prop >= 0.0 )
 		tr.setPixelProportion(globalOptions.pix_prop);
+    
+    tr.setVectorSelectionParams(globalOptions.vSelParams);
+    
 	tr.setSkipInvalidPolygons(globalOptions.skip_invalid_polys);
     
     tr.addRaster(rasterInfo->ri_mask);
