@@ -53,6 +53,9 @@ static void extractFunction(ExtractionItem* item) {
 
     if ( globalOptions.pix_prop >= 0.0 )
 		tr.setPixelProportion(globalOptions.pix_prop);
+    
+    tr.setVectorSelectionParams(globalOptions.vSelParams);
+    
 	if ( globalOptions.FID >= 0 )
 		tr.setDesiredFID(globalOptions.FID);
 	tr.setVerbose(globalOptions.verbose);
