@@ -1,6 +1,11 @@
 StarSpan ChangeLog
 $Id$
 
+2008-03-02 (1.0.07)
+    - Adding options --sql, --where, and --dialect à la ogrinfo:
+        
+    - removed unneeded starspan_csv_dup_pixel.cc from Makefile.am
+    
 2008-02-05
     - Included --gui extended option to launch the GUI
     
